Added handlers for create actions. Added handlers for POST methods.

--- a/admin/src/main/webapp/WEB-INF/views/ba/gebruikersbeheer/bronhouders.vm
+++ b/admin/src/main/webapp/WEB-INF/views/ba/gebruikersbeheer/bronhouders.vm
@@ -1,4 +1,4 @@
-<h1>Bronhouders!</h1>
+#set($contextTitle = 'Bronhouders')
 
 <p>
 	<a href="#springUrl('/ba/gebruikersbeheer/bronhouders/-/create')">Nieuwe bronhouder toevoegen</a>
@@ -43,6 +43,3 @@
 		#end
 	</tbody>
 </table>
-
-<ul>
-</ul>
