--- a/admin/src/main/webapp/WEB-INF/views/ba/gebruikersbeheer/edit-bronhouder.vm
+++ b/admin/src/main/webapp/WEB-INF/views/ba/gebruikersbeheer/edit-bronhouder.vm
@@ -1,1 +1,111 @@
-<h1>Edit bronhouder</h1>
+<form method="POST" action="#springUrl('/ba/gebruikersbeheer/bronhouders/')#if($bronhouderId)$bronhouderId#else-#end/create" data-return-url="#springUrl('/ba/gebruikersbeheer/bronhouders')">
+	<table class="cds-table">
+		<thead>
+			<tr>
+				<th colspan="2">
+					#if($bronhouderId)
+						Gegevens bewerken voor bronhouder #e($bronhouder.naam)
+					#else
+						Nieuwe bronhouder toevoegen
+					#end
+				</th>
+			</tr>
+		</thead>
+		<tbody>
+			#springBind("bronhouderForm.naam")
+			<tr>
+				<td>Bronhoudernaam</td>
+				<td>
+					<input type="text" name="#e(${status.expression})" value="#e($!status.value)" data-dojo-type="dijit/form/TextBox">
+				</td>
+			</tr>
+			
+			#springBind("bronhouderForm.code")
+			<tr>
+				<td>Bronhoudercode</td>
+				<td>
+					<input type="text" name="#e(${status.expression})" value="#e($!status.value)" data-dojo-type="dijit/form/TextBox">
+				</td>
+			</tr>
+			
+			#springBind("bronhouderForm.commonName")
+			<tr>
+				<td>Identificatie</td>
+				<td>
+					<input type="text" name="#e(${status.expression})" value="#e($!status.value)" data-dojo-type="dijit/form/TextBox">
+				</td>
+			</tr>
+			
+			#springBind("bronhouderForm.contactNaam")
+			<tr>
+				<td>Contactpersoon naam</td>
+				<td>
+					<input type="text" name="#e(${status.expression})" value="#e($!status.value)" data-dojo-type="dijit/form/TextBox">
+				</td>
+			</tr>
+			
+			#springBind("bronhouderForm.contactAdres")
+			<tr>
+				<td>Contactpersoon adres</td>
+				<td>
+					<input type="text" name="#e(${status.expression})" value="#e($!status.value)" data-dojo-type="dijit/form/TextBox">
+				</td>
+			</tr>
+			
+			#springBind("bronhouderForm.contactPostcode")
+			<tr>
+				<td>Contactpersoon postcode</td>
+				<td>
+					<input type="text" name="#e(${status.expression})" value="#e($!status.value)" data-dojo-type="dijit/form/TextBox">
+				</td>
+			</tr>
+			
+			#springBind("bronhouderForm.contactPlaats")
+			<tr>
+				<td>Contactpersoon plaats</td>
+				<td>
+					<input type="text" name="#e(${status.expression})" value="#e($!status.value)" data-dojo-type="dijit/form/TextBox">
+				</td>
+			</tr>
+			
+			#springBind("bronhouderForm.contactEmailadres")
+			<tr>
+				<td>Contactpersoon e-mail</td>
+				<td>
+					<input type="text" name="#e(${status.expression})" value="#e($!status.value)" data-dojo-type="dijit/form/TextBox">
+				</td>
+			</tr>
+			
+			#springBind("bronhouderForm.contactTelefoonnummer")
+			<tr>
+				<td>Contactpersoon telefoonnummer</td>
+				<td>
+					<input type="text" name="#e(${status.expression})" value="#e($!status.value)" data-dojo-type="dijit/form/TextBox">
+				</td>
+			</tr>
+		</tbody>
+		<tfoot>
+			<tr>
+				<th colspan="3">
+					<div id="stdButton">
+						<button id="button-ok" data-dojo-type="dijit/form/Button" type="submit" name="submit" value="Submit" title="Druk op deze knop om de NAW gegevens op te slaan">Opslaan</button>
+						<button id="button-cancel" type="button" name="cancel" data-dojo-type="dijit/form/Button">Annuleren</button>
+					</div>
+				</th>
+			</tr>
+		</tfoot>
+	</table>
+</form>
+
+<script type="text/javascript">
+require (['dijit/registry', 'dojo/query', 'dojo/dom-attr', 'cds/ready!'], function (registry, query, domAttr) {
+	var cancelButton = registry.byId ('button-cancel');
+
+	cancelButton.on ('click', function (e) {
+		e.preventDefault ();
+		e.stopPropagation ();
+		
+		window.location.href = domAttr.get (query ('form')[0], 'data-return-url');
+	});
+});
+</script>
