--- a/admin/src/main/webapp/WEB-INF/views/velocity-macros.vm
+++ b/admin/src/main/webapp/WEB-INF/views/velocity-macros.vm
@@ -11,3 +11,18 @@
 	</ul>
 	#end
 #end
+
+#macro(cancelButtonScript)
+	<script type="text/javascript">
+	require (['dijit/registry', 'dojo/query', 'dojo/dom-attr', 'cds/ready!'], function (registry, query, domAttr) {
+		var cancelButton = registry.byId ('button-cancel');
+	
+		cancelButton.on ('click', function (e) {
+			e.preventDefault ();
+			e.stopPropagation ();
+			
+			window.location.href = domAttr.get (query ('form')[0], 'data-return-url');
+		});
+	});
+	</script>	
+#end
