Added tab to user editor for authorization.

--- a/admin/src/main/webapp/WEB-INF/views/ba/gebruikersbeheer/gebruikers.vm
+++ b/admin/src/main/webapp/WEB-INF/views/ba/gebruikersbeheer/gebruikers.vm
@@ -148,6 +148,9 @@ require ([
 		<li class="dijitTab">
 			<a class="tabLabel" href="#springUrl('/ba/gebruikersbeheer/bronhouders')">Bronhouders</a>
 		</li>
+		<li class="dijitTab">
+			<a class="tabLabel" href="#springUrl('/ba/gebruikersbeheer/autorisatie')">Thema autorisatie</a>
+		</li>
 	</ul>
 	
 	<div class="cds-tab-content">
