--- a/admin/src/main/webapp/WEB-INF/views/ba/gebruikersbeheer/bronhouders.vm
+++ b/admin/src/main/webapp/WEB-INF/views/ba/gebruikersbeheer/bronhouders.vm
@@ -9,7 +9,10 @@
 			<a class="tabLabel" href="#springUrl('/ba/gebruikersbeheer/bronhouders')">Bronhouders</a>
 		</li>
 		<li class="dijitTab">
-			<a class="tabLabel" href="#springUrl('/ba/gebruikersbeheer/autorisatie')">Thema autorisatie</a>
+			<a class="tabLabel" href="#springUrl('/ba/gebruikersbeheer/autorisatie/bronhouders')">Bronhouder thema autorisatie</a>
+		</li>
+		<li class="dijitTab">
+			<a class="tabLabel" href="#springUrl('/ba/gebruikersbeheer/autorisatie/gebruikers')">Gebruiker thema autorisatie</a>
 		</li>
 	</ul>
 	
