Current authorization for users can be listed in the admin.

--- a/admin/src/main/webapp/WEB-INF/views/ba/gebruikersbeheer/gebruiker-autorisatie.vm
+++ b/admin/src/main/webapp/WEB-INF/views/ba/gebruikersbeheer/gebruiker-autorisatie.vm
@@ -17,6 +17,41 @@
 	</ul>
 	
 	<div class="cds-tab-content">
+	
+		<table class="cds-table">
+			<thead>
+				<tr>
+					<th>Gebruiker</th>
+					<th>Autorisatie op thema's</th>
+				</tr>
+			</thead>
+			<tbody>
+				#foreach($gtas in $gebruikerThemas)
+				<tr>
+					<td>
+						<a href="#springUrl('/ba/gebruikersbeheer/autorisatie/gebruikers/')#e($gtas.gebruiker.gebruikersnaam)/edit">
+							#e($gtas.gebruiker.gebruikersnaam)
+						</a>
+					</td>
+					<td>
+						#if(!$gtas.gebruikerThemas.isEmpty())
+						<ul>
+							#foreach($gta in $gtas.gebruikerThemas)
+							<li>
+								<strong>#e($gta.bronhouderThema.thema.naam)</strong> voor bronhouder <strong>#e($gta.bronhouderThema.bronhouder.naam)</strong>: <strong>#e($gta.typeGebruik)</strong>
+							</li>
+							#end
+						</ul>
+						#else
+						(geen)
+						#end
+					</td>
+				</tr>
+				#end
+			</tbody>
+		</table>
+		<ul>
+		</ul>
 
 	</div>
 </div>
