--- a/admin/src/main/webapp/WEB-INF/views/ba/etloverzicht.vm
+++ b/admin/src/main/webapp/WEB-INF/views/ba/etloverzicht.vm
@@ -56,6 +56,7 @@ require ([
 	#if(!$jobsMode)
 
 		// DATASETinfoS
+#if($authz.anyGranted("ROLE_DATABEHEERDER"))
 	    window.doValidate = function (url){
 	        var validationUrl = "#springUrl('/')"+url;
 			dojo.xhrGet({
@@ -79,6 +80,7 @@ require ([
 			    }
 			});
 	    };
+#end
 	
 	    dojo.ready(function() {
 			refreshDatasetInfoMap();
@@ -507,9 +509,13 @@ require ([
 						<th class="actief" title="Is de dataset actief, dan wordt regelmatig gecheckt of er nieuwe data moet worden opgenomen in CDS" >Actief</th>						
 						<th class="metadata" title="Klik op de link om de metadata gegevens van een dataset te bekijken" >Metadata</th>
 						<th class="resultaten" title="Meest recente validatie resultaat">Laatste validatieresultaat</th>
+						#if($authz.anyGranted("ROLE_DATABEHEERDER"))
 						<th class="valideren" title="Ad-hoc-valideren van een dataset">Valideer</th>
+						#end
 						<th class="status" title="Meest recente import status">Status import</th>
+						#if($authz.anyGranted("ROLE_DATABEHEERDER"))
 						<th class="importeren" title="Ad-hoc-importeren van een dataset">Importeer</th>
+						#end
 						<th class="voortgang" title="Actuele weergave van de voortgang van het validatie of import proces">Voortgang</th>
 					</tr>
 				</thead>
@@ -531,14 +537,18 @@ require ([
 						#end
 						<td id="datasetInfo_${datasetInfo.id}_lastValidationResult" class="resultaten" title="Meest recente validatie resultaat van dataset $datasetInfo.datasetType.naam " >
 						</td>
+						#if($authz.anyGranted("ROLE_DATABEHEERDER"))
 						<td class="valideren" title="Druk op de knop Valideer om de dataset $datasetInfo.datasetType.naam te valideren" >
 							<button id="datasetInfo_${datasetInfo.id}_validateButton" disabled data-dojo-type="dijit/form/Button" onclick="doValidate('ba/bronhouders/$bronhouder.id/validate?datasetType=$datasetInfo.datasetType.id&amp;uuid=$esc.url($datasetInfo.uuid)');">Valideer</button>
 						</td>
+						#end						
 						<td id="datasetInfo_${datasetInfo.id}_statusImport" class="statusImport" title="Meest recente import status van dataset $datasetInfo.datasetType.naam " >
 						</td>
+						#if($authz.anyGranted("ROLE_DATABEHEERDER"))
 						<td class="importeren" title="Druk op de knop Importeer om de dataset $datasetInfo.datasetType.naam te importeren" >
 							<button id="datasetInfo_${datasetInfo.id}_importButton" disabled data-dojo-type="dijit/form/Button" onclick="doImport('ba/bronhouders/$bronhouder.id/import?datasetType=$datasetInfo.datasetType.id&amp;uuid=$esc.url($datasetInfo.uuid)');">Importeer</button>
 						</td>
+						#end
 						<td id="datasetInfo_${datasetInfo.id}_progress" class="voortgang" title="Actuele weergave van de voortgang van het validatie of import proces van dataset $datasetInfo.datasetType.naam "></td>
 					</tr>
 					#end
